fix: prevent category panel jump on iOS

--- a/src/components/CoreLayout/Navbar/SidebarMenu/SidebarMenu.scss
+++ b/src/components/CoreLayout/Navbar/SidebarMenu/SidebarMenu.scss
@@ -73,5 +73,5 @@
 }
 
 .aside-bar__category-content--open {
-  max-height: 500px;
+  max-height: 350px;
 }
